--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
 Click==7.0
 cssmin==0.2.0
 Flask==1.1.1
-Flask-Assets==0.12
-Flask-Login==0.4.1
+Flask-Assets==2.0
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
+flasklogin-tutorial==0.0.1
 itsdangerous==1.1.0
-Jinja2==2.10.3
+Jinja2==2.11.1
 jsmin==2.2.2
 lesscpy==0.13.0
 MarkupSafe==1.1.1
 ply==3.11
 psycopg2-binary==2.8.4
+PyMySQL==0.9.3
 python-dotenv==0.10.2
 six==1.12.0
-SQLAlchemy==1.3.10
-webassets==0.12.1
-Werkzeug==0.16.0
+SQLAlchemy==1.3.13
+webassets==2.0
+Werkzeug==1.0.0
 WTForms==2.2.1
