--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-Click==7.0
+click==7.1.1
 cssmin==0.2.0
-Flask==1.1.1
+dnspython==1.16.0
+email-validator==1.0.5
+Flask==1.1.2
 Flask-Assets==2.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
-flasklogin-tutorial==0.0.1
+Flask-WTF==0.14.3
+idna==2.9
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
 jsmin==2.2.2
 lesscpy==0.13.0
 MarkupSafe==1.1.1
 ply==3.11
 psycopg2-binary==2.8.4
 PyMySQL==0.9.3
-python-dotenv==0.10.2
+python-dotenv==0.13.0
 six==1.12.0
-SQLAlchemy==1.3.13
+SQLAlchemy==1.3.16
 webassets==2.0
-Werkzeug==1.0.0
-WTForms==2.2.1
+Werkzeug==1.0.1
+WTForms==2.3.1
