--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ flask_wtf = "*"
 python-dotenv = "*"
 email_validator = "*"
 uWSGI = "^2.0.19"
+ddtrace = "^0.44.0"
 
 [tool.poetry.dev-dependencies]
 lesscpy = "*"
