--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
-click==7.1.2
-dnspython==2.0.0
-email-validator==1.1.1
-Flask==1.1.2
-Flask-Assets==2.0
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-PyMySQL==0.10.1
-python-dotenv==0.14.0
-SQLAlchemy==1.3.20
+click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+ddtrace==0.44.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+dnspython==2.0.0; python_version >= "3.6"
+email-validator==1.1.2
+flask-assets==2.0
+flask-login==0.5.0
+flask-sqlalchemy==2.4.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+flask-wtf==0.14.3
+flask==1.1.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+idna==2.10; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+intervaltree==3.1.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+itsdangerous==1.1.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+jinja2==2.11.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+markupsafe==1.1.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+protobuf==3.14.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+pymysql==0.10.1
+python-dotenv==0.15.0
+six==1.15.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+sortedcontainers==2.3.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+sqlalchemy==1.3.20; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+tenacity==6.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+uwsgi==2.0.19.1
 webassets==2.0
-Werkzeug==1.0.1
-WTForms==2.3.3
+werkzeug==1.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+wtforms==2.3.3
