--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-FLASK_APP=wsgi.py
-FLASK_ENV=production
+FLASK_APP=main.py
+FLASK_DEBUG=False
 SECRET_KEY=yoursecretkey
+ENVIRONMENT=production
+
 SQLALCHEMY_DATABASE_URI=mysql+pymysql://myuser:mypassword@host.example.com:1234/mydatabase
-COMPRESSOR_DEBUG=True
+
 LESS_BIN=/usr/local/bin/lessc
+COMPRESSOR_DEBUG=False
 ASSETS_DEBUG=False
 LESS_RUN_IN_DEBUG=False
