--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "flask_login_tutorial"
-version = "0.1.0"
-description = ""
+version = "0.1.1"
+description = "Tutorial for building user-based Flask applications"
 authors = ["Todd Birchard <toddbirchard@gmail.com>"]
 maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
 license = "MIT"
@@ -9,16 +9,10 @@ readme = "README.md"
 homepage = "https://hackersandslackers.com/flask-login-user-authentication/"
 repository = "https://github.com/toddbirchard/flasklogin-tutorial/"
 documentation = "https://hackersandslackers.com/flask-login-user-authentication/"
-keywords = [
-    "Flask",
-    "Flask-Login",
-    "Authentication",
-    "Users",
-    "Accounts"
-]
+keywords = ["Flask", "Flask-Login", "Authentication", "Users", "Accounts"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.10,<4.0"
 flask_sqlalchemy = "*"
 flask_login = "*"
 flask_assets = "*"
@@ -28,21 +22,28 @@ python-dotenv = "*"
 email_validator = "*"
 uWSGI = "*"
 Flask = "*"
-lessc = "^0.1.3"
-
-[tool.poetry.dev-dependencies]
+lessc = "*"
 lesscpy = "*"
 cssmin = "*"
 jsmin = "*"
 isort = "*"
 black = "*"
+flake8 = "^6.1.0"
 
 [build-system]
-requires = ["poetry>=1.1.12"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry.scripts]
-run = "wsgi:app"
+run = "main:app"
 
 [tool.poetry.urls]
 issues = "https://github.com/toddbirchard/flasklogin-tutorial/issues"
+
+[tool.black]
+line-length = 120
+target-version = ['py310']
+src_paths = ["flask_login_tutorial", "config", "main"]
+
+[tool.pylint.'MESSAGES CONTROL']
+disable = "C0103,C0301,W0703,W0621"
