--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,43 @@
-aadict==0.2.3
-asset==0.6.13
-click==8.1.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and python_version >= "3.7" and platform_system == "Windows"
-dnspython==2.2.1; python_version >= "3.6" and python_version < "4.0" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0")
-email-validator==1.1.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-flask-assets==2.0
-flask-login==0.6.0; python_version >= "3.7"
-flask-sqlalchemy==2.5.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-flask-wtf==1.0.1; python_version >= "3.6"
-flask==2.1.1; python_version >= "3.7"
-globre==0.1.5
-greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
-idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
-importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7")
-itsdangerous==2.1.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-jinja2==3.1.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-lessc==0.1.3
-markupsafe==2.1.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-pymysql==1.0.2; python_version >= "3.6"
-python-dotenv==0.20.0; python_version >= "3.5"
-six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
-sqlalchemy==1.4.35; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-uwsgi==2.0.20
-webassets==2.0
-werkzeug==2.1.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-wtforms==3.0.1; python_version >= "3.7"
-zipp==3.8.0; python_version < "3.10" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7")
+aadict==0.2.3 ; python_version >= "3.10" and python_version < "4.0"
+asset==0.6.13 ; python_version >= "3.10" and python_version < "4.0"
+black==23.7.0 ; python_version >= "3.10" and python_version < "4.0"
+blinker==1.6.2 ; python_version >= "3.10" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+cssmin==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+dnspython==2.4.2 ; python_version >= "3.10" and python_version < "4.0"
+email-validator==2.0.0.post2 ; python_version >= "3.10" and python_version < "4.0"
+flake8==6.1.0 ; python_version >= "3.10" and python_version < "4.0"
+flask-assets==2.0 ; python_version >= "3.10" and python_version < "4.0"
+flask-login==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
+flask-sqlalchemy==3.0.5 ; python_version >= "3.10" and python_version < "4.0"
+flask-wtf==1.1.1 ; python_version >= "3.10" and python_version < "4.0"
+flask==2.3.3 ; python_version >= "3.10" and python_version < "4.0"
+globre==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
+greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
+isort==5.12.0 ; python_version >= "3.10" and python_version < "4.0"
+itsdangerous==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
+jsmin==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
+lessc==0.1.3 ; python_version >= "3.10" and python_version < "4.0"
+lesscpy==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
+mccabe==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+packaging==23.1 ; python_version >= "3.10" and python_version < "4.0"
+pathspec==0.11.2 ; python_version >= "3.10" and python_version < "4.0"
+platformdirs==3.10.0 ; python_version >= "3.10" and python_version < "4.0"
+ply==3.11 ; python_version >= "3.10" and python_version < "4.0"
+pycodestyle==2.11.0 ; python_version >= "3.10" and python_version < "4.0"
+pyflakes==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
+pymysql==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.20 ; python_version >= "3.10" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
+typing-extensions==4.7.1 ; python_version >= "3.10" and python_version < "4.0"
+uwsgi==2.0.22 ; python_version >= "3.10" and python_version < "4.0"
+webassets==2.0 ; python_version >= "3.10" and python_version < "4.0"
+werkzeug==2.3.7 ; python_version >= "3.10" and python_version < "4.0"
+wtforms==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
