--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,28 @@
 aadict==0.2.3 ; python_version >= "3.10" and python_version < "4.0"
+annotated-types==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
 asset==0.6.13 ; python_version >= "3.10" and python_version < "4.0"
-black==23.7.0 ; python_version >= "3.10" and python_version < "4.0"
-blinker==1.6.2 ; python_version >= "3.10" and python_version < "4.0"
+black==23.11.0 ; python_version >= "3.10" and python_version < "4.0"
+blinker==1.7.0 ; python_version >= "3.10" and python_version < "4.0"
+cerberus==1.3.5 ; python_version >= "3.10" and python_version < "4.0"
+certifi==2023.11.17 ; python_version >= "3.10" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 cssmin==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
+distlib==0.3.7 ; python_version >= "3.10" and python_version < "4.0"
 dnspython==2.4.2 ; python_version >= "3.10" and python_version < "4.0"
-email-validator==2.0.0.post2 ; python_version >= "3.10" and python_version < "4.0"
+docopt==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
+email-validator==2.1.0.post1 ; python_version >= "3.10" and python_version < "4.0"
 flake8==6.1.0 ; python_version >= "3.10" and python_version < "4.0"
-flask-assets==2.0 ; python_version >= "3.10" and python_version < "4.0"
-flask-login==0.6.2 ; python_version >= "3.10" and python_version < "4.0"
-flask-sqlalchemy==3.0.5 ; python_version >= "3.10" and python_version < "4.0"
-flask-wtf==1.1.1 ; python_version >= "3.10" and python_version < "4.0"
-flask==2.3.3 ; python_version >= "3.10" and python_version < "4.0"
+flask-assets==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
+flask-login==0.6.3 ; python_version >= "3.10" and python_version < "4.0"
+flask-sqlalchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
+flask-wtf==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
+flask==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 globre==0.1.5 ; python_version >= "3.10" and python_version < "4.0"
-greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
-idna==3.4 ; python_version >= "3.10" and python_version < "4.0"
-isort==5.12.0 ; python_version >= "3.10" and python_version < "4.0"
+greenlet==3.0.2 ; python_version >= "3.10" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
+isort==5.13.0 ; python_version >= "3.10" and python_version < "4.0"
 itsdangerous==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
 jsmin==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -25,19 +31,32 @@ lesscpy==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
 mccabe==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
-packaging==23.1 ; python_version >= "3.10" and python_version < "4.0"
-pathspec==0.11.2 ; python_version >= "3.10" and python_version < "4.0"
-platformdirs==3.10.0 ; python_version >= "3.10" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.10" and python_version < "4.0"
+pathspec==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
+pep517==0.13.1 ; python_version >= "3.10" and python_version < "4.0"
+pip-api==0.0.30 ; python_version >= "3.10" and python_version < "4.0"
+pip==23.3.1 ; python_version >= "3.10" and python_version < "4.0"
+pipreqs==0.4.13 ; python_version >= "3.10" and python_version < "4.0"
+platformdirs==4.1.0 ; python_version >= "3.10" and python_version < "4.0"
+plette[validation]==0.4.4 ; python_version >= "3.10" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.10" and python_version < "4.0"
-pycodestyle==2.11.0 ; python_version >= "3.10" and python_version < "4.0"
+pycodestyle==2.11.1 ; python_version >= "3.10" and python_version < "4.0"
+pydantic-core==2.14.5 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==2.5.2 ; python_version >= "3.10" and python_version < "4.0"
 pyflakes==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
 pymysql==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
+requirementslib==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==69.0.2 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.20 ; python_version >= "3.10" and python_version < "4.0"
+sqlalchemy==2.0.23 ; python_version >= "3.10" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
-typing-extensions==4.7.1 ; python_version >= "3.10" and python_version < "4.0"
-uwsgi==2.0.22 ; python_version >= "3.10" and python_version < "4.0"
+tomlkit==0.12.3 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
+urllib3==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
+uwsgi==2.0.23 ; python_version >= "3.10" and python_version < "4.0"
 webassets==2.0 ; python_version >= "3.10" and python_version < "4.0"
-werkzeug==2.3.7 ; python_version >= "3.10" and python_version < "4.0"
-wtforms==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
+werkzeug==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
+wtforms==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
+yarg==0.1.9 ; python_version >= "3.10" and python_version < "4.0"
