--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
 ENVIRONMENT=production
 
-FLASK_APP=main.py
+FLASK_APP=wsgi.py
 FLASK_DEBUG=False
 SECRET_KEY=yoursecretkey
 
 SQLALCHEMY_DATABASE_URI=mysql+pymysql://myuser:mypassword@host.example.com:1234/mydatabase
 
 LESS_BIN=/usr/local/bin/lessc
-COMPRESSOR_DEBUG=False
-ASSETS_DEBUG=False
-LESS_RUN_IN_DEBUG=False
+
