--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flask_login_tutorial"
-version = "0.1.2"
+version = "0.1.3"
 description = "Tutorial for building Flask applications with user authorization & login."
 authors = ["Todd Birchard <todd@hackersandslackers.com>"]
 maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
@@ -12,7 +12,7 @@ documentation = "https://hackersandslackers.com/flask-login-user-authentication/
 keywords = ["Flask", "Flask-Login", "Authentication", "Users", "Accounts"]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
+python = ">=3.12,<4.0"
 flask = "*"
 flask_sqlalchemy = "*"
 flask_login = "*"
@@ -29,25 +29,23 @@ black = "*"
 flake8 = "*"
 gunicorn = "*"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.masonry.api"
-
 [tool.poetry.scripts]
 run = "wsgi:app"
 
 [tool.poetry.urls]
 issues = "https://github.com/toddbirchard/flasklogin-tutorial/issues"
 
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.pylint.'MESSAGES CONTROL']
+disable = "C0103,C0301,W0703,W0621"
+
 [tool.black]
 line-length = 120
-target-version = ['py310']
-src_paths = ["flask_login_tutorial", "config", "main"]
 
 [tool.isort]
 profile = "black"
 multi_line_output = 3
 src_paths = ["flask_login_tutorial", "config", "wsgi"]
-
-[tool.pylint.'MESSAGES CONTROL']
-disable = "C0103,C0301,W0703,W0621"
