--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@ colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and platfo
 cssmin==0.2.0 ; python_version >= "3.12" and python_version < "4.0"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
-flake8==7.2.0 ; python_version >= "3.12" and python_version < "4.0"
+flake8==7.3.0 ; python_version >= "3.12" and python_version < "4.0"
 flask-assets==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 flask-login==0.6.3 ; python_version >= "3.12" and python_version < "4.0"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
 flask-wtf==1.2.2 ; python_version >= "3.12" and python_version < "4.0"
-flask==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
-greenlet==3.2.2 ; python_version >= "3.12" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+flask==3.1.2 ; python_version >= "3.12" and python_version < "4.0"
+greenlet==3.2.4 ; python_version >= "3.12" and python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 gunicorn==23.0.0 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 isort==6.0.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -26,12 +26,15 @@ packaging==25.0 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 platformdirs==4.3.8 ; python_version >= "3.12" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.12" and python_version < "4.0"
-pycodestyle==2.13.0 ; python_version >= "3.12" and python_version < "4.0"
-pyflakes==3.3.2 ; python_version >= "3.12" and python_version < "4.0"
+pycodestyle==2.14.0 ; python_version >= "3.12" and python_version < "4.0"
+pyflakes==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 pymysql==1.1.1 ; python_version >= "3.12" and python_version < "4.0"
-python-dotenv==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
-sqlalchemy==2.0.41 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.13.2 ; python_version >= "3.12" and python_version < "4.0"
-webassets==2.0 ; python_version >= "3.12" and python_version < "4.0"
+python-dotenv==1.1.1 ; python_version >= "3.12" and python_version < "4.0"
+pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==80.9.0 ; python_version >= "3.12" and python_version < "4.0"
+sqlalchemy==2.0.43 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.14.1 ; python_version >= "3.12" and python_version < "4.0"
+webassets==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 werkzeug==3.1.3 ; python_version >= "3.12" and python_version < "4.0"
 wtforms==3.2.1 ; python_version >= "3.12" and python_version < "4.0"
+zope-dottedname==6.1 ; python_version >= "3.12" and python_version < "4.0"
